avadirect.com (archived on 2006-06-15)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "informationtech;shopping",
  "char_count": 3289,
  "classifier_probability": 0.85,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 13.8,
  "homepage_snapshot_redirected_domain": "avadirect.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20060401013212id_/http://www.avadirect.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20060401013212id_/http%3A//avadirect.com",
  "interval": "2006_A",
  "link_text": "Privacy policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "avadirect.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20060615080501id_/http%3A//www.avadirect.com/privacy.asp",
  "policy_title": "AVADirect - Privacy and Security",
  "policy_url": "avadirect.com/privacy.asp",
  "sha1": "d37dfd22e00f0b76a922fc9b97235578dc857a01",
  "simhash": 17631499119107437343,
  "simhash_updated": true,
  "site_hostname": "avadirect.com",
  "site_url": "http://avadirect.com",
  "smog": NaN,
  "strict_updated": true,
  "timestamp": "20060615080501",
  "word_count": 523,
  "year": 2006
}

--- a/a/av/ava/avadirect.com.html
+++ b/a/av/ava/avadirect.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the avadirect.com privacy policy that was archived on 2005-12-10.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051210051112id_/http%3A//www.avadirect.com/privacy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the avadirect.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615080501id_/http%3A//www.avadirect.com/privacy.asp) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html><head>
 
@@ -37,6 +37,12 @@
 <table height="100%" width="100%" border="0" cellspacing="0" cellpadding="0"><tbody><tr><td valign="top">
 
 
+<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
+</script>
+<script type="text/javascript">
+_uacct = "UA-398355-1";
+urchinTracker();
+</script>
 <table width="100%" border="0" cellspacing="0" cellpadding="0" bgcolor="#ffffff"><tbody><tr><td>
 <!--background="/images/top-bkgr.gif"-->
 <img src="/images/px.gif" height="15" width="1"><br>
@@ -48,7 +54,7 @@
   <td width="60%" align="center" valign="top">
     <!--<NOBR><DIV class="phone">buy online or call: 1-866-766-4629</DIV></NOBR>-->
     <!--<IMG alt="buy computer online or call: 1-866-766-4629" src="/images/ava-banner-call.gif">-->
-<a href="/plist.asp?page=1&amp;keywords=supermicro&amp;from=0&amp;to=0&amp;rows=100"><img alt="Build your Supermicro solution with us" src="/images/specials/ava-banner-Supermicro.gif" border="0"></a>
+<a href="/contact_info.asp"><img alt="buy computer online or call: 1-866-766-4629" src="/images/ava-banner-call.gif" border="0"></a>
 
   </td>
   <td class="hspace"></td>
@@ -245,32 +251,33 @@ Though it is not obligatory, by using our Customer Account system you gain some 
 
 <br>
 <style type="text/css">
-.promo-text {font: normal 10px Verdana; color: #000000; padding: 5px 5px; background-color: #EEEEEE}
-.promo-text2 {font: normal 10px Verdana; color: #000000; padding: 5px 5px; background-color: #EEEEEE}
-a.promo-link:link { font-weight: bold; color: #387FC8; text-decoration: none }
-a.promo-link:visited { font-weight: bold; color: #387FC8; text-decoration: none }
-a.promo-link:hover { font-weight: bold; color: #387FC8; text-decoration: underline }
-a.promo-link:active { font-weight: bold; color: #387FC8; text-decoration: underline }
+.promo3-text {font: normal 10px Verdana; color: #000000; padding: 5px 5px; background-color: #FFFFFF}
+.promo3-text2 {font: bold 10px Verdana; color: #000000; padding: 5px 5px; background-color: #FFFFFF}
+a.promo3-link:link { font-weight: bold; color: #387FC8; text-decoration: none }
+a.promo3-link:visited { font-weight: bold; color: #387FC8; text-decoration: none }
+a.promo3-link:hover { font-weight: bold; color: #387FC8; text-decoration: underline }
+a.promo3-link:active { font-weight: bold; color: #387FC8; text-decoration: underline }
 </style>
 
 <table cellspacing="0" cellpadding="0" border="0" width="180">
-<tbody><tr><td valign="top" colspan="2"><img alt="Compact Mini PC Computer Systems" src="/images/specials/ava-mpc-header.gif" border="0"></td></tr>
-<tr><td valign="top" colspan="2" class="promo-text" style="border-right: solid 1px #6699CC">
-Time to junk those obsolete, elephant-like desktops! 
-</td>
-</tr>
-
+<tbody><tr><td valign="top" colspan="2"><a href="/plist.asp?cid=147" class="promo3-link"><img alt="Notebooks and Desknotes" src="/images/specials/ava-nb-header.jpg" border="0"></a></td></tr>
+<tr><td valign="top" colspan="2" class="promo3-text" style="border-right: solid 1px #6699CC">
+Notebooks lead the way!
+</td></tr>
 <tr>
-<td valign="top" width="5" class="promo-text2"> </td>
-<td valign="top" width="175" class="promo-text2" style="border-right: solid 1px #6699CC">
-<b>Shopping Choices:</b>
-<li><a href="/plist.asp?cid=329" class="promo-link"><b>Intel Based Mini PC</b></a>
-</li><li><a href="/plist.asp?cid=328" class="promo-link">AMD Based Mini PC</a>
-</li><li><a href="/plist.asp?cid=367" class="promo-link">Mini PC Barebones</a>
+<td valign="top" width="5" class="promo3-text2"> </td>
+<td valign="top" width="175" class="promo3-text2" style="border-right: solid 1px #6699CC">
+<b>Laptop Choices:</b>
+<li><a href="/plist.asp?cid=332" class="promo3-link">Athlon™ 64 Laptops</a>
+</li><li><a href="/plist.asp?cid=332" class="promo3-link">Turion™ 64 Laptops</a>
+</li><li><a href="/plist.asp?cid=332" class="promo3-link">Sempron™ 64 Laptops</a>
+</li><li><a href="/plist.asp?cid=278" class="promo3-link">Pentium® 4 Laptops</a>
+</li><li><a href="/plist.asp?cid=278" class="promo3-link">Celeron® Laptops</a>
+</li><li><a href="/plist.asp?cid=291" class="promo3-link">Centrino™ Laptops</a>
 </li></td></tr>
-
-<tr><td valign="top" colspan="2" class="promo-text" style="border-bottom: solid 1px #6699CC; border-right: solid 1px #6699CC">
-Wide variety of colors and styles, choose and customize ...</td></tr>
+<tr><td valign="top" colspan="2" class="promo3-text" style="border-bottom: solid 1px #6699CC; border-right: solid 1px #6699CC">
+Configure to meet your personal specification ...
+</td></tr>
 </tbody></table>
 <br>
 	     
@@ -317,11 +324,11 @@ Comodo Group Secure Certificate gives all parties the confidence that informatio
 <br><br><b>Fraud Protection</b><br><br>
 
 
-AVADirect has designed its online store to give you options concerning the privacy of your credit card information, name, address, e-mail and any other information you provide us. AVADirect is committed to data security with respect to information collected on our site. In addition to the industry standard security measures available through your browser called SSL encryption, we have made a practice to call customers in the event of potential problem with your purchase. Also, you may always contact a sales representative over the telephone in case you don't want to provide your credit card information online at 1-216-663-5880.
+AVADirect has designed its online store to give you options concerning the privacy of your credit card information, name, address, e-mail and any other information you provide us. AVADirect is committed to data security with respect to information collected on our site. In addition to the industry standard security measures available through your browser called SSL encryption, we have made a practice to call customers in the event of potential problem with your purchase. Also, you may always contact a sales representative over the telephone in case you don't want to provide your credit card information online at 1-866-766-4629.
 
 Help provect yourself - we strongly encourage you to use your billing address as a shipping destination to minimize risk of fraud, however unlikely a scenario it may seem.
 
-For protection of our Customers, we ship only to the verified billing address or authorized shipping address registered with the Customer's credit card issuer. Authorized shipping address can be obtained upon contact of the credit card issuer. Credit card issuer registers alternative (shipping) address upon customer's authorization in addition to existing billing address for internet deliveries. Please call 1-216-663-5880 if you have any questions.
+For protection of our Customers, we ship only to the verified billing address or authorized shipping address registered with the Customer's credit card issuer. Authorized shipping address can be obtained upon contact of the credit card issuer. Credit card issuer registers alternative (shipping) address upon customer's authorization in addition to existing billing address for internet deliveries. Please call 1-866-766-4629 if you have any questions.
 
 To register an alternative address (not the same as billing - for example your office or relative's place of residence), call the toll-free number on the back of your credit card for further assistance.
 
@@ -367,10 +374,9 @@ Revision Date: January 1, 2003
 <a href="http://www.avadirect.com/fraud_protection.asp" class="navbot">Fraud Protection</a>
 <br><br>
 
-© 2003-2005 AVADirect, Inc. All rights reserved. 
+© 2003-2006 AVADirect, Inc. All rights reserved. 
 </td>
 </tr></tbody></table>
-
 
 <script language="javascript" src="https://server.iad.liveperson.net/hc/35647116/x.js?cmd=file&amp;file=chatScript3&amp;site=35647116&amp;imageUrl=https://www.avadirect.com/images/liveperson/"></script>
 
