--- a/i/in/inf/infusionsoft.com.html
+++ b/i/in/inf/infusionsoft.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the infusionsoft.com privacy policy that was archived on 2005-12-29.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051229131030id_/http%3A//www.infusionsoft.com/privacy_policy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the infusionsoft.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615080808id_/http%3A//infusionsoft.com/privacy_policy.htm) for the most accurate reproduction.-->
 
 <html><head>
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
