--- a/p/pr/pre/press-release-writing.com.html
+++ b/p/pr/pre/press-release-writing.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the press-release-writing.com privacy policy that was archived on 2005-12-19.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051219224327id_/http%3A//www.press-release-writing.com/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the press-release-writing.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615081041id_/http%3A//www.press-release-writing.com/privacy.htm) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN" "http://www.w3.org/TR/REC-html40/loose.dtd"><html><head>
 <title>Press-Release-Writing.com Privacy Statement</title>
@@ -106,8 +106,7 @@ Now</b></a></font></p></td></tr> </tbody></table></div>
         </tr>
         <tr>
           <td width="100%" align="center">
-      <a target="_blank" href="https://www.bbbonline.org/cks.asp?id=2030801113133396">
-      <img border="0" src="images/PrivacySeal4.gif" hspace="6" vspace="6" width="90" height="31"></a></td>
+      &nbsp;</td>
         </tr>
       </tbody></table>
       <p align="center" class="prw-head-white"><font face="Arial" color="#FFFFFF" size="3">Press
@@ -133,7 +132,7 @@ Now</b></a></font></p></td></tr> </tbody></table></div>
   </tr>
 </tbody></table>
 
-<!--webbot bot="Include" endspan i-checksum="20535" -->
+<!--webbot bot="Include" endspan i-checksum="54790" -->
 
         <p>&nbsp; <img border="0" src="images/spacer.gif" width="151" height="1"></p></td>
       <td width="469" bgcolor="#3399FF" valign="top" align="center">
@@ -248,7 +247,7 @@ Now</b></a></font></p></td></tr> </tbody></table></div>
   <font size="2" face="Arial" color="#FFFFFF"><b>Toll Free Ordering, Call
   877.362.7924</b><br>
   press-release-writing.com -
-  Copyright © 1998-2005 Press-Release-Writing.com<br>
+  Copyright © 1998-2006 Press-Release-Writing.com<br>
   All Rights Reserved.<br>
   <center>Use of this Web site constitutes acceptance of the <a href="privacy.htm" class="prw-nav-white" target="_parent"><b>Privacy
   Statement</b>.</a></center></font>
@@ -257,7 +256,7 @@ Now</b></a></font></p></td></tr> </tbody></table></div>
 <p><a href="http:/www.press-release-writing.com/distribution1/">
 <img border="0" src="images/clear.gif" width="1" height="1"></a></p>
 
-<!--webbot bot="Include" endspan i-checksum="43004" -->
+<!--webbot bot="Include" endspan i-checksum="43005" -->
 
       </td>
     </tr>
