respondus.com (archived on 2006-06-15)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business;education;informationtech",
  "char_count": 6918,
  "classifier_probability": 0.97,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 12.56,
  "homepage_snapshot_redirected_domain": "respondus.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20060411003332id_/http://www.respondus.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20060411003332id_/http%3A//respondus.com",
  "interval": "2006_A",
  "link_text": "Privacy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "respondus.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20060615082239id_/http%3A//www.respondus.com/about/privacy.shtml",
  "policy_title": "About Respondus :: Privacy Statement",
  "policy_url": "respondus.com/about/privacy.shtml",
  "sha1": "608b0052ee4869f4017654b5d6839985cc56dba7",
  "simhash": 9014568318463934495,
  "simhash_updated": true,
  "site_hostname": "respondus.com",
  "site_url": "http://respondus.com",
  "smog": 14.41,
  "strict_updated": true,
  "timestamp": "20060615082239",
  "word_count": 1088,
  "year": 2006
}

--- a/r/re/res/respondus.com.html
+++ b/r/re/res/respondus.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the respondus.com privacy policy that was archived on 2005-12-21.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051221052626id_/http%3A//www.respondus.com/about/privacy.shtml) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the respondus.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615082239id_/http%3A//www.respondus.com/about/privacy.shtml) for the most accurate reproduction.-->
 
 <html language="EN"><head>
 <title>About Respondus :: Privacy Statement</title>
@@ -62,6 +62,7 @@ var urls = new buildArray("",
 "/products/index.shtml",
 "/products/respondus.shtml",
 "/products/respondus_le.shtml",
+"/products/lockdown.shtml",
 "/products/studymate.shtml",
 "/products/userguide.shtml",
 "/testbank/search.php",
@@ -84,6 +85,13 @@ var urls = new buildArray("",
 "/products/respondus_campus.shtml",
 "/register/index.shtml",
 "/register/index.shtml",
+
+"",
+
+"/products/index.shtml",
+"/products/respondus_single.shtml",
+"/products/respondus_campus.shtml#RLDB",
+"/products/studymate_single.shtml",
 
 "",
 
@@ -274,6 +282,7 @@ function turnOff(imageName) {
 <option>Products:</option>
 <option>- Respondus</option>
 <option>- Respondus LE</option>
+<option>- Respondus LockDown Browser</option>
 <option>- StudyMate</option>
 <option>- User Guides</option>
 <option>- Publisher Test Banks</option>
@@ -299,6 +308,13 @@ function turnOff(imageName) {
 
 <option> </option>
 
+<option>Pricing:</option>
+<option>- Respondus Pricing</option>
+<option>- LockDown Browser Pricing</option>
+<option>- StudyMate Pricing</option>
+
+<option> </option>
+
 <option>Support:</option>
 <option>- Support Menu</option>
 <option>- User Guides</option>
@@ -321,7 +337,7 @@ function turnOff(imageName) {
 
 
 
-Wednesday, December 21, 2005
+Thursday, June 15, 2006
 
 <br clear="ALL">
 
@@ -515,7 +531,7 @@ If you have any questions about this privacy statement, the practices of this si
 </p>
 <p>
 <font face="Arial, sans-serif" size="1">
-Copyright © 2000-2005 Respondus, Inc. — All Rights Reserved.<br>
+Copyright © 2000-2006 Respondus, Inc. — All Rights Reserved.<br>
 Respondus is a registered trademark and StudyMate is a trademark of Respondus, Inc. &nbsp; ANGEL is a registered trademark of ANGEL Learning &nbsp; Blackboard is a registered trademark of Blackboard Inc., eCollege is a registered trademark of eCollege, and WebCT is a registered trademark of WebCT Inc.
 <br>
 </font></p>
