marchofdimes.com (archived on 2006-06-15)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "education;health",
  "char_count": 22003,
  "classifier_probability": 0.99,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 13.13,
  "homepage_snapshot_redirected_domain": "marchofdimes.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20060402211004id_/http://marchofdimes.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20060402211004id_/http%3A//marchofdimes.com",
  "interval": "2006_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "marchofdimes.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20060615082630id_/http%3A//www.marchofdimes.com/aboutus/about_4076.asp%3Flink%3Dfooter",
  "policy_title": "About Us: March of Dimes Privacy Policy & Your Privacy Rights",
  "policy_url": "marchofdimes.com/aboutus/about_4076.asp?link=footer",
  "sha1": "ea8b2ab6654bfbaca3ca804a0b13b142bf04cf7c",
  "simhash": 3400351741014080807,
  "simhash_updated": false,
  "site_hostname": "marchofdimes.com",
  "site_url": "http://marchofdimes.com",
  "smog": 15.25,
  "strict_updated": false,
  "timestamp": "20060615082630",
  "word_count": 3502,
  "year": 2006
}

--- a/m/ma/mar/marchofdimes.com.html
+++ b/m/ma/mar/marchofdimes.com.html
@@ -1,7 +1,12 @@
-<!--The following is the downloaded HTML source of the marchofdimes.com privacy policy that was archived on 2005-12-18.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051218003553id_/http%3A//www.marchofdimes.com/aboutus/about_4076.asp%3Flink%3Dfooter) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the marchofdimes.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615082630id_/http%3A//www.marchofdimes.com/aboutus/about_4076.asp%3Flink%3Dfooter) for the most accurate reproduction.-->
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html><head><!-- PageID 4076 - published by RedDot 6.1 - 6.1.2.5 - 14450 -->
+<html><head><script language="JavaScript" type="text/javascript" src="/includes/referdetect.js"></script>
+
+
+
+
+<!-- PageID 4076 - published by RedDot 6.1 - 6.1.2.5 - 15120 -->
 
 
 
@@ -18,7 +23,7 @@
 <meta name="keywords" content="">
 <meta name="description" content="">
 <meta name="abstract" content="">
-<meta name="copyright" content="Copyright 2005 March of Dimes Birth Defects Foundation. All rights reserved.">
+<meta name="copyright" content="Copyright 2006 March of Dimes Birth Defects Foundation. All rights reserved.">
 
 
 
@@ -349,7 +354,7 @@ function makeHelpBoxes(boxText,boxName)
     <table width="168" border="0" cellspacing="0" cellpadding="0">
     <tbody><tr>
     <td width="12"><img src="/images/spc.gif" width="12" height="32" alt="" border="0"></td>
-    <td width="156" class="leftnavspecial">December 17, 2005</td>
+    <td width="156" class="leftnavspecial">June 15, 2006</td>
     </tr>
     </tbody></table>
  
@@ -405,9 +410,6 @@ function makeHelpBoxes(boxText,boxName)
 </tr>
 
 <!--white line under navigation bar-->
-<tr>
-<td colspan="7"><img src="/images/spc.gif" width="1" height="1" alt="" border="0"></td>
-</tr>
 </tbody></table>
 <!--end global navigation--> 
 </td>
@@ -657,9 +659,8 @@ function makeHelpBoxes(boxText,boxName)
 <td bgcolor="#ffffff">
 
 
-<img src="/images/au_om_index.jpg" width="575" height="99" alt="" border="0"></td>
+<img src="/images/au_om_index.jpg" width="575" alt="" border="0"></td>
 </tr>
-
 <tr>
 <td bgcolor="#ffffff">
 
@@ -873,7 +874,6 @@ END HIDE TITLE BAR if title copy is present -->
 </tbody></table>
 <!-- end content area and right-nav --></td>
 </tr>
-
 </tbody></table></td>
 <!--vertical white line at right of content area-->
 <td><img src="/images/spc.gif" width="1" height="1" alt="" border="0"></td>
@@ -913,7 +913,7 @@ END HIDE TITLE BAR if title copy is present -->
 <td width="5"><img src="/images/spc.gif" width="5" height="1" alt="" border="0"></td>
 <!--global text links & copyright notice-->
 <td width="575" valign="top" class="footer">
-<a href="http://www.marchofdimes.com/home.asp" class="footer">Home</a>
+<a href="http://www.marchofdimes.com/home_old_4_20_06.asp" class="footer">Home</a>
  | <a href="http://www.marchofdimes.com/aboutus/about_4079.asp?link=footer" class="footer">Editorial Policy</a>
  | <a href="http://www.marchofdimes.com/aboutus/about_4080.asp?link=footer" class="footer">Terms of Use</a>
  | <a href="http://www.marchofdimes.com/aboutus/about_4076.asp?link=footer" class="footer">Privacy Policy</a>
@@ -923,9 +923,11 @@ END HIDE TITLE BAR if title copy is present -->
  | <a href="http://www.marchofdimes.com/aboutus/contact_us.asp?link=footer" class="footer">Contact Us</a>
 
  | <a href="http://www.nacersano.org?link=footer" class="footer" target="_blank">nacersano.org</a>
+
+ <a href="http://www.marchofdimesaffiliates.com/marchofdimes_promo.html?link=footer" class="footer">Affiliate Program</a>
 <br>
 <img src="/images/spc.gif" width="1" height="3" alt="" border="0"><br><br>
-© 2005 March of Dimes Birth Defects Foundation. All rights reserved. The March of Dimes is a not-for-profit organization recognized as tax-exempt under Internal Revenue Code section 501(c)(3). Our mission is to improve the health of babies by preventing birth defects, premature birth, and infant mortality.</td>
+© 2006 March of Dimes Birth Defects Foundation. All rights reserved. The March of Dimes is a not-for-profit organization recognized as tax-exempt under Internal Revenue Code section 501(c)(3). Our mission is to improve the health of babies by preventing birth defects, premature birth, and infant mortality.</td>
 <!--spacer-->
 <td width="5"><img src="/images/spc.gif" width="5" height="1" alt="" border="0"></td>
 </tr>
@@ -933,7 +935,14 @@ END HIDE TITLE BAR if title copy is present -->
 <tr>
 <td colspan="4"><img src="/images/spc.gif" width="1" height="12" alt="" border="0"></td>
 </tr>
-</tbody></table></td>
+</tbody></table>
+<!--start google tracking-->
+<script src="https://ssl.google-analytics.com/urchin.js" type="text/javascript"></script>
+<script type="text/javascript">
+_uacct = "UA-219864-1";
+urchinTracker();
+</script>
+<!--end google tracking--></td>
 <td><img src="/images/spc.gif" width="1" height="1" alt="" border="0"></td>
 <!--vertical gray line at page edge-->
 <td width="1" bgcolor="#E6E6E6"><img src="/images/spc.gif" width="1" height="1" alt="" border="0"></td>
