--- a/a/af/afr/afreego.com.html
+++ b/a/af/afr/afreego.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the afreego.com privacy policy that was archived on 2005-12-18.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051218082952id_/http%3A//www.afreego.com/PrivacyPolicy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the afreego.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615082823id_/http%3A//www.afreego.com/PrivacyPolicy.php) for the most accurate reproduction.-->
 
 <html><head>
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
@@ -61,7 +61,7 @@ afg_back=focus()
                 <td bgcolor="#FFFFFF" height="83" width="100%">
                   <p align="center"><font face="Arial">
 <!-- START aFreeGo Banner Rotation -->
-<a href="http://affiliates.digitalriver.com/z/26/rn_a4545/" target="_blank"><img src="http://affiliates.digitalriver.com/42/9934/26" alt="Symantec's Norton Internet Security 2006" border="0"></a><!-- END aFreeGo Banner Rotation -->
+<a href="http://www.inklineglobal.com/adsales/afreego_psb/tvo_468_broadcast.html" target="_blank"><img src="/AdImages/inkline_468_broadcast.gif" alt="Watch Live Broadcast TV in your PC" width="468" height="60" border="0"></a><!-- END aFreeGo Banner Rotation -->
                   </font></p>
                 </td>
                 <td bgcolor="#FFFFFF" width="128" height="73"><img src="/SiteImages/spacer.gif" width="10" height="10">
@@ -96,14 +96,18 @@ afg_back=focus()
   </tbody></table>
 <font color="#003399" face="Arial"><img border="0" src="/SiteImages/contArrowRight1.gif" align="absmiddle" width="17" height="17"><a href="http://www.aFreeGo.com/" class="cont">Home<br>
 </a>
-<a href="http://www.aFreeGo.com/" class="cont"></a><img border="0" src="/SiteImages/contArrowRight1.gif" align="absmiddle" width="17" height="17"><a href="/AffiliatePrograms.php" class="cont">Affiliate 
-Programs</a><a href="http://www.aFreeGo.com/" class="cont"> <br>
-</a> <img border="0" src="/SiteImages/contArrowRight1.gif" align="absmiddle" width="17" height="17"><a href="http://www.aFreeGo.com/index.php#Featured" class="cont">Featured 
+<a href="http://www.aFreeGo.com/" class="cont"></a><img border="0" src="/SiteImages/contArrowRight1.gif" align="absmiddle" width="17" height="17"><a href="/AuthorCenter/" class="cont">Author Center</a><a href="http://www.aFreeGo.com/" class="cont"> <br>
+</a> <img border="0" src="/SiteImages/contArrowRight1.gif" align="absmiddle" width="17" height="17"></font><font face="Arial"><a href="http://www.aFreeGo.com/SubmitProgram.php" class="cont">Submit 
+  Software</a><br>
+</font><font color="#003399" face="Arial"><img border="0" src="/SiteImages/contArrowRight1.gif" align="absmiddle" width="17" height="17"></font><font face="Arial"><a href="http://www.aFreeGo.com/Advertising.php" class="cont">Advertise 
+  on aFreeGo<br>
+</a></font><font face="Arial"><a href="/OrderKeywords.php" class="cont"> </a></font> <font color="#003399" face="Arial"></font><font color="#003399" face="Arial"><img border="0" src="/SiteImages/contArrowRight1.gif" align="absmiddle" width="17" height="17"><a href="http://www.aFreeGo.com/index.php#Featured" class="cont">Featured 
 Software<br>
-</a><img border="0" src="/SiteImages/contArrowRight1.gif" align="absmiddle" width="17" height="17"><a href="http://www.aFreeGo.com/index.php#MostPopular" class="cont">Most 
+  </a><img border="0" src="/SiteImages/contArrowRight1.gif" align="absmiddle" width="17" height="17"><a href="http://www.aFreeGo.com/index.php#MostPopular" class="cont">Most 
 Popular<br>
-</a> <img border="0" src="/SiteImages/contArrowRight1.gif" align="absmiddle" width="17" height="17"><a href="http://www.aFreeGo.com/TopRated.php" class="cont">Top 
+  </a> <img border="0" src="/SiteImages/contArrowRight1.gif" align="absmiddle" width="17" height="17"><a href="http://www.aFreeGo.com/TopRated.php" class="cont">Top 
 Rated</a> </font> <br>
+<font color="#003399" face="Arial"><img border="0" src="/SiteImages/contArrowRight1.gif" align="absmiddle" width="17" height="17"><a href="http://www.aFreeGo.com/Reviews/" class="cont">Software Reviews</a> </font> <br>
 <font color="#003399" face="Arial"><img border="0" src="/SiteImages/contArrowRight1.gif" align="absmiddle" width="17" height="17"><a href="http://www.aFreeGo.com/rssFeeds.php" class="cont">RSS
 Feeds </a></font><font face="Arial" size="2"><a href="http://www.afreego.com/rssFeeds.php" target="_blank"><img src="/SiteImages/rss.gif" width="30" height="14" border="0" align="absmiddle"></a></font><font color="#003399" face="Arial"> </font><br>
 <font color="#003399" face="Arial"><img border="0" src="/SiteImages/contArrowRight1.gif" align="absmiddle" width="17" height="17"><a href="/NewzAlertComposer.php" class="contSpec">RSS
@@ -113,35 +117,29 @@ Editor</a></font><br>
 <table border="0" width="100%" cellspacing="0" cellpadding="0"><tbody><tr><td width="100%><b><font face=" arial"="" size="1"><img border="0" src="http://www.aFreeGo.com/SiteImages/catDot.gif" width="17" height="17" align="absmiddle"><a class="cat" href="http://www.afreego.com/Categories/Business_and_Productivity/index.php">Business and Productivity</a></td></tr><tr><td width="100%><b><font face=" arial"="" size="1"><img border="0" src="http://www.aFreeGo.com/SiteImages/catDot.gif" width="17" height="17" align="absmiddle"><a class="cat" href="http://www.afreego.com/Categories/Desktop/index.php">Desktop</a></td></tr><tr><td width="100%><b><font face=" arial"="" size="1"><img border="0" src="http://www.aFreeGo.com/SiteImages/catDot.gif" width="17" height="17" align="absmiddle"><a class="cat" href="http://www.afreego.com/Categories/Games/index.php">Games</a></td></tr><tr><td width="100%><b><font face=" arial"="" size="1"><img border="0" src="http://www.aFreeGo.com/SiteImages/catDot.gif" width="17" height="17" align="absmiddle"><a class="cat" href="http://www.afreego.com/Categories/Graphics/index.php">Graphics</a></td></tr><tr><td width="100%><b><font face=" arial"="" size="1"><img border="0" src="http://www.aFreeGo.com/SiteImages/catDot.gif" width="17" height="17" align="absmiddle"><a class="cat" href="http://www.afreego.com/Categories/Home_and_Education/index.php">Home and Education</a></td></tr><tr><td width="100%><b><font face=" arial"="" size="1"><img border="0" src="http://www.aFreeGo.com/SiteImages/catDot.gif" width="17" height="17" align="absmiddle"><a class="cat" href="http://www.afreego.com/Categories/Internet_and_Network/index.php">Internet and Network</a></td></tr><tr><td width="100%><b><font face=" arial"="" size="1"><img border="0" src="http://www.aFreeGo.com/SiteImages/catDot.gif" width="17" height="17" align="absmiddle"><a class="cat" href="http://www.afreego.com/Categories/Multimedia/index.php">Multimedia</a></td></tr><tr><td width="100%><b><font face=" arial"="" size="1"><img border="0" src="http://www.aFreeGo.com/SiteImages/catDot.gif" width="17" height="17" align="absmiddle"><a class="cat" href="http://www.afreego.com/Categories/Programming/index.php">Programming</a></td></tr><tr><td width="100%><b><font face=" arial"="" size="1"><img border="0" src="http://www.aFreeGo.com/SiteImages/catDot.gif" width="17" height="17" align="absmiddle"><a class="cat" href="http://www.afreego.com/Categories/Utilities/index.php">Utilities</a></td></tr><tr><td width="100%><b><font face=" arial"="" size="1"><img border="0" src="http://www.aFreeGo.com/SiteImages/catDot.gif" width="17" height="17" align="absmiddle"><a class="cat" href="http://www.afreego.com/Categories/Web_Tools/index.php">Web Tools</a></td></tr></tbody></table><!--- End CATEGORY Contents --->
 <!--- Start MAIN Contents --->
 <p> <font color="#003399" face="Arial"><img border="0" src="/SiteImages/contArrowRight1.gif" align="absmiddle" width="17" height="17"></font><font face="Arial"><a href="http://www.aFreeGo.com/aFreeGoNewsList.php" class="cont">Win 
-  with aFreeGoNews<br>
+  FREE Software<br>
 </a></font><font color="#003399" face="Arial"><img border="0" src="/SiteImages/contArrowRight1.gif" align="absmiddle" width="17" height="17"></font><font face="Arial"><a href="http://www.aFreeGo.com/aFreeGoNewsList.php" class="cont">Free 
   Newsletter</a></font><font face="Arial"><a href="http://www.aFreeGo.com/aFreeGoNewsList.php" class="cont"><br>
-  </a></font> <font color="#003399" face="Arial"><img border="0" src="/SiteImages/contArrowRight1.gif" align="absmiddle" width="17" height="17"></font><font face="Arial"><a href="/afgnArchives.php" class="cont">aFreeGoNews
-  Archives</a></font><font face="Arial"><a href="http://www.aFreeGo.com/aFreeGoNewsList.php" class="cont"> <br>
-</a></font><font color="#003399" face="Arial"></font><font color="#003399" face="Arial"><img border="0" src="/SiteImages/contArrowRight1.gif" align="absmiddle" width="17" height="17"></font><font face="Arial"><a href="http://www.aFreeGo.com/AuthorInfo.php" class="cont">Author 
+  </a></font><font face="Arial"><a href="http://www.aFreeGo.com/aFreeGoNewsList.php" class="cont"></a></font><font color="#003399" face="Arial"></font><font color="#003399" face="Arial"><img border="0" src="/SiteImages/contArrowRight1.gif" align="absmiddle" width="17" height="17"></font><font face="Arial"><a href="http://www.aFreeGo.com/AuthorInfo.php" class="cont">Author 
   Information<br>
-  </a></font> <font color="#003399" face="Arial"><img border="0" src="/SiteImages/contArrowRight1.gif" align="absmiddle" width="17" height="17"></font><font face="Arial"><a href="http://www.aFreeGo.com/SubmitProgram.php" class="cont">Submit 
-  Software<br>
-  </a></font> <font color="#003399" face="Arial"><img border="0" src="/SiteImages/contArrowRight1.gif" align="absmiddle" width="17" height="17"></font><font face="Arial"><a href="http://www.aFreeGo.com/Advertising.php" class="cont">Promote
+  </a></font><font color="#003399" face="Arial"><img border="0" src="/SiteImages/contArrowRight1.gif" align="absmiddle" width="17" height="17"></font><font face="Arial"><a href="http://www.aFreeGo.com/Advertising.php" class="cont">Promote
   your Software</a><br>
   </font><font color="#003399" face="Arial"><img border="0" src="/SiteImages/contArrowRight1.gif" align="absmiddle" width="17" height="17"></font><font face="Arial"><a href="/OrderKeywords.php" class="cont">Purchase
   Keywords</a><br>
-  </font><font color="#003399" face="Arial"><img border="0" src="/SiteImages/contArrowRight1.gif" align="absmiddle" width="17" height="17"></font><font face="Arial"><a href="http://www.aFreeGo.com/Advertising.php" class="cont">Advertise 
-  on aFreeGo<br>
-  </a></font><font face="Arial"><a href="/OrderKeywords.php" class="cont">
-  </a></font> <font color="#003399" face="Arial"><img border="0" src="/SiteImages/contArrowRight1.gif" align="absmiddle" width="17" height="17"></font><font face="Arial"><a href="http://www.aFreeGo.com/PressReleases.php" class="cont">Press 
+  </font><font color="#003399" face="Arial"><img border="0" src="/SiteImages/contArrowRight1.gif" align="absmiddle" width="17" height="17"></font><font face="Arial"><a href="http://www.aFreeGo.com/PressReleases.php" class="cont">Press 
   Releases<br>
   </a></font><font color="#003399" face="Arial"><img border="0" src="/SiteImages/contArrowRight1.gif" align="absmiddle" width="17" height="17"></font><font face="Arial"><a href="http://www.aFreeGo.com/Articles.php" class="cont">Articles</a></font><font face="Arial"><a href="http://www.aFreeGo.com/PressReleases.php" class="cont"><br>
   </a></font> <font color="#003399" face="Arial"><img border="0" src="/SiteImages/contArrowRight1.gif" align="absmiddle" width="17" height="17"></font><font face="Arial"><a href="http://www.aFreeGo.com/PrivacyPolicy.php" class="cont">Privacy 
   Policy<br>
   </a></font> <font color="#003399" face="Arial"><img border="0" src="/SiteImages/contArrowRight1.gif" align="absmiddle" width="17" height="17"></font><font face="Arial"><a href="http://www.aFreeGo.com/AboutShareware.php" class="cont">About 
   Shareware<br>
-  </a></font> <font color="#003399" face="Arial"><img border="0" src="/SiteImages/contArrowRight1.gif" align="absmiddle" width="17" height="17"></font><font face="Arial"><a href="http://www.aFreeGo.com/Feedback.php" class="cont">Feedback<br>
-  </a></font> <font color="#003399" face="Arial"><img border="0" src="/SiteImages/contArrowRight1.gif" align="absmiddle" width="17" height="17"></font><font face="Arial"><a href="http://www.aFreeGo.com/Friends.php" class="cont">Friends 
+  </a></font><font face="Arial"><a href="http://www.aFreeGo.com/Feedback.php" class="cont"></a></font> <font color="#003399" face="Arial"><img border="0" src="/SiteImages/contArrowRight1.gif" align="absmiddle" width="17" height="17"></font><font face="Arial"><a href="http://www.aFreeGo.com/Friends.php" class="cont">Friends 
   of aFreeGo</a></font> <br>
   <font color="#003399" face="Arial"><img border="0" src="/SiteImages/contArrowRight1.gif" align="absmiddle" width="17" height="17"></font><font face="Arial"><a href="/Links.php" class="cont">Links</a><br>
   </font><font color="#003399" face="Arial"><img border="0" src="/SiteImages/contArrowRight1.gif" align="absmiddle" width="17" height="17"></font><font face="Arial"><a href="http://www.aFreeGo.com/Feedback.php" class="cont">Contact
   Us</a></font><font face="Arial">  </font></p>
+<p>
+<a href="http://www.AddMeToTheList.com/subscribe.htm?listID=49&amp;rtnURL=http://www.aFreeGo.com" target="_blank"><img src="/SiteImages/listSignup1.gif" alt="aFreeGoNews brings you the latest software and special deals" width="160" height="60" border="0"></a></p>
 <p><font face="Arial"><strong>&nbsp;Thanks to our Site Sponsors :</strong><br>
 </font><font color="#003399" face="Arial">
 </font></p><p><font color="#003399" face="Arial"><font color="#003399" face="Arial"><img border="0" src="/SiteImages/contArrowRight1.gif" align="absmiddle" width="17" height="17"></font><font face="Arial"><a href="http://www.CastleSoftware.biz" target="_blank" class="cont">Castle Software</a></font><br>
@@ -156,12 +154,15 @@ Editor</a></font><br>
   <font color="#003399" face="Arial"><img border="0" src="/SiteImages/contArrowRight1.gif" align="absmiddle" width="17" height="17"></font><font face="Arial"><a href="http://www.NewzAlert.com" target="_blank" class="cont">NewzAlert.com</a></font> <br>
   <font color="#003399" face="Arial"><img border="0" src="/SiteImages/contArrowRight1.gif" align="absmiddle" width="17" height="17"></font><font face="Arial"><a href="http://www.active-undelete.com" target="_blank" class="cont">Active@
     UNDELETE  - Data Recovery</a></font><br>                                        
-  <font color="#003399" face="Arial"><img border="0" src="/SiteImages/contArrowRight1.gif" align="absmiddle" width="17" height="17"></font><font face="Arial"><a href="http://www.easeus.com" target="_blank" class="cont">EaseUs Data Recovery</a></font></font></p><font color="#003399" face="Arial">
+  <font color="#003399" face="Arial"><img border="0" src="/SiteImages/contArrowRight1.gif" align="absmiddle" width="17" height="17"></font><font face="Arial"><a href="http://www.easeus.com" target="_blank" class="cont">EaseUs Data Recovery</a></font><br>
+  <font color="#003399" face="Arial"><img border="0" src="/SiteImages/contArrowRight1.gif" align="absmiddle" width="17" height="17"></font><font face="Arial"><a href="http://www.PadRepository.com" target="_blank" class="cont">PadRepository.com</a></font><br>
+  <font color="#003399" face="Arial"><img border="0" src="/SiteImages/contArrowRight1.gif" align="absmiddle" width="17" height="17"></font><font face="Arial"><a href="http://www.AddMeToTheList.com" target="_blank" class="cont">AddMeToTheList.com</a></font></font></p><font color="#003399" face="Arial">
 </font><p></p>
 <table width="200" height="200" border="0" cellpadding="0" cellspacing="0">
   <tbody><tr>
     <td>
       <div align="center">
+	  
         <script type="text/javascript"><!--
 google_ad_client = "pub-1671928158653518";
 google_ad_width = 120;
@@ -171,6 +172,8 @@ google_cpa_choice = "CAAQ0aCazgEaCAu3WxmTyqbLKOPC93M";
 //--></script>
         <script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
       </script>
+	  
+	  
       </div></td>
   </tr>
 </tbody></table>
