--- a/o/of/off/office.com.html
+++ b/o/of/off/office.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the office.com privacy policy that was archived on 2005-12-20.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051220204919id_/http%3A//office.com/templates/page1_other.asp%3Fdocid%3D12) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the office.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615085001id_/http%3A//www.office.com/templates/page1_other.asp%3Fdocid%3D12) for the most accurate reproduction.-->
 
 <html><head>
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
