--- a/f/fl/fle/flexonline.com.html
+++ b/f/fl/fle/flexonline.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the flexonline.com privacy policy that was archived on 2005-12-12.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051212143759id_/http%3A//www.flexonline.com/glob/priv) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the flexonline.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615085322id_/http%3A//www.flexonline.com/glob/priv) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/1999/REC-html401-19991224/loose.dtd"><html lang="en"><head>
 <meta http-equiv="content-type" content="text/html; charset=iso-8859-1">
@@ -118,7 +118,7 @@ if (NS4) onresize = reDo;
 							<img src="/imgs/nav/nav_subscribe.gif" alt="" width="147" height="24" border="0" name="subscribe"></a></td>
 					</tr>
 					<tr>
-						<td><a href="/news/102" onmouseover="changeImages('news', 'img3on')" onmouseout="changeImages('news', 'img3off')">
+						<td><a href="/news/135" onmouseover="changeImages('news', 'img3on')" onmouseout="changeImages('news', 'img3off')">
 							<img src="/imgs/nav/nav_news.gif" alt="" width="147" height="24" border="0" name="news"></a></td>
 					</tr>
 					<tr>
@@ -126,11 +126,11 @@ if (NS4) onresize = reDo;
 							<img src="/imgs/nav/nav_photo.gif" alt="" width="147" height="24" border="0" name="photo"></a></td>
 					</tr>
 					<tr>
-						<td><a href="/train/59" onmouseover="changeImages('training', 'img5on')" onmouseout="changeImages('training', 'img5off')">
+						<td><a href="/train/74" onmouseover="changeImages('training', 'img5on')" onmouseout="changeImages('training', 'img5off')">
 							<img src="/imgs/nav/nav_training.gif" alt="" width="147" height="24" border="0" name="training"></a></td>
 					</tr>
 					<tr>
-						<td><a href="/nutr/46" onmouseover="changeImages('nutrition', 'img6on')" onmouseout="changeImages('nutrition', 'img6off')">
+						<td><a href="/nutr/54" onmouseover="changeImages('nutrition', 'img6on')" onmouseout="changeImages('nutrition', 'img6off')">
 							<img src="/imgs/nav/nav_nutrition.gif" alt="" width="147" height="24" border="0" name="nutrition"></a></td>
 					</tr>
 					<tr>
@@ -141,6 +141,12 @@ if (NS4) onresize = reDo;
 						<td><a href="/newsletter/" onmouseover="changeImages('newsletter', 'img9on')" onmouseout="changeImages('newsletter', 'img9off')">
 							<img src="/imgs/nav/nav_newsletter_new.gif" alt="" width="147" height="24" border="0" name="newsletter"></a></td>
 					</tr>
+					
+					<tr>
+						<td><a href="http://games.flexonline.com/" target="_blank" onmouseover="changeImages('games', 'img11on')" onmouseout="changeImages('games', 'img11off')">
+							<img src="/imgs/nav/nav_games.gif" alt="" width="147" height="24" border="0" name="games"></a></td>
+					</tr>
+					
 					<tr>
 						<td><a href="/subscribe_save/" onmouseover="changeImages('subscribenow', 'img10on')" onmouseout="changeImages('subscribenow', 'img10off')">
 							<img src="/imgs/nav/nav_subscribenow.gif" alt="" width="147" height="34" border="0" name="subscribenow"></a></td>
@@ -380,7 +386,7 @@ The Internet is an evolving medium. Accordingly, WIN reserves the right to chang
 														<td bgcolor="#DE6300" align="center">
 														<table border="0" cellspacing="0" cellpadding="4">
 															<tbody><tr>
-																<td align="center"><table border="0" width="0" cellpadding="0" cellspacing="1" bgcolor="FEBE06"><tbody><tr><td><img src="/images/fl/208653/1979.jpg" height="169" width="128" border="0"></td></tr></tbody></table></td>
+																<td align="center"><table border="0" width="0" cellpadding="0" cellspacing="1" bgcolor="FEBE06"><tbody><tr><td><img src="/images/fl/208866/2241.jpg" height="169" width="128" border="0"></td></tr></tbody></table></td>
 															</tr>
 															<tr>
 																<td align="center"><a href="http://ads.flexonline.com/perl/ads/cl.pl?i=1700"><img src="/imgs/motif/subscribe.gif" alt="" width="108" height="24" border="0"></a></td>
@@ -557,7 +563,36 @@ w/ 6-month sub ONLY $39.99 <br>
 	</tr>
 	<tr>
 		<td align="center" class="textwhite">
-		<br><br><span color="#FFFFFF"><a href="/glob/ab/" class="textwhite">About Us</a> | <a href="/glob/priv/" class="textwhite">Privacy</a> | <a href="/glob/adv/" class="textwhite">Advertising</a> | <a href="/glob/cont/" class="textwhite">Contact Us</a><br><br><br> 2005 Weider Publication, Inc. All Rights Reserved<br><br><br></span>
+		<br><br>
+		<span color="#FFFFFF">
+		<a href="/glob/ab/" class="textwhite">About Us</a> | 
+		<a href="/glob/cont/" class="textwhite">Contact Us</a> |
+		<a href="/glob/adv/" class="textwhite">Advertising</a> |
+		<a href="/glob/priv/" class="textwhite">Privacy</a> | 
+		<a href="/subscribe_save/" class="textwhite">Subscribe</a> 
+		<br><br> 
+		2006 Weider Publication, Inc. All Rights Reserved
+		<br><br><br>
+<strong>Visit our other publications online:</strong><br>
+
+<strong><i>Health &amp; Fitness:</i></strong>
+<a href="http://www.fitpregnancy.com" target="_blank" class="textwhite">Fit Pregnancy</a> |
+<a href="http://www.ishape.com" target="_blank" class="textwhite">iShape</a> |
+<a href="http://www.lgnmagazine.com" target="_blank" class="textwhite">Looking Good Now</a> |
+<a href="http://www.mensfitness.com" target="_blank" class="textwhite">Men's Fitness</a> |
+<a href="http://www.muscleandfitness.com" target="_blank" class="textwhite">Muscle &amp; Fitness</a> |
+<a href="http://www.muscleandfitnesshers.com" target="_blank" class="textwhite">Muscle &amp; Fitness Hers</a> |
+<a href="http://www.naturalhealthmag.com" target="_blank" class="textwhite">Natural Health</a> |
+<a href="http://www.shape.com" target="_blank" class="textwhite">Shape</a><br>
+
+
+<strong><i>Entertainment:</i></strong>
+<a href="http://www.countryweekly.com" target="_blank" class="textwhite">Country Weekly</a> |
+<a href="http://www.nationalenquirer.com" target="_blank" class="textwhite">National Enquirer</a> |
+<a href="http://www.starmagazine.com" target="_blank" class="textwhite">Star</a> |
+<a href="http://www.weeklyworldnews.com" target="_blank" class="textwhite">Weekly World News</a>
+		<br><br> 
+		</span>
 		</td>
 	</tr>
 	<tr>
@@ -571,6 +606,7 @@ w/ 6-month sub ONLY $39.99 <br>
 <script type="text/javascript" src="http://americanmedia.us.intellitxt.com/intellitxt/front.asp?ipid=2564"></script>
 
 <!-- end Vibrant Media IntelliTXT script section -->
+
 
 </tbody></table>
 
