--- a/b/ba/ban/bangalinet.com.html
+++ b/b/ba/ban/bangalinet.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the bangalinet.com privacy policy that was archived on 2005-12-30.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051230011937id_/http%3A//www.bangalinet.com/privacystatement.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the bangalinet.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615091211id_/http%3A//bangalinet.com/privacystatement.htm) for the most accurate reproduction.-->
 
 <html><head>
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
