search-this.com (archived on 2006-06-15)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business;education",
  "char_count": 1538,
  "classifier_probability": 0.88,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 10.44,
  "homepage_snapshot_redirected_domain": "search-this.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20060402213613id_/http://search-this.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20060402213613id_/http%3A//search-this.com",
  "interval": "2006_A",
  "link_text": "privacy policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "search-this.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20060615091234id_/http%3A//www.search-this.com/privacy.aspx",
  "policy_title": "Search-This: Privacy Statement",
  "policy_url": "search-this.com/privacy.aspx",
  "sha1": "e05cfd9201a3cc788c9ffc673f205b0163cdfda7",
  "simhash": 2698733588494613830,
  "simhash_updated": false,
  "site_hostname": "search-this.com",
  "site_url": "http://search-this.com",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20060615091234",
  "word_count": 229,
  "year": 2006
}

--- a/s/se/sea/search-this.com.html
+++ b/s/se/sea/search-this.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the search-this.com privacy policy that was archived on 2005-12-19.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051219113613id_/http%3A//www.search-this.com/privacy.aspx) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the search-this.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615091234id_/http%3A//www.search-this.com/privacy.aspx) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
  <title>Search-This: Privacy Statement</title>
@@ -213,7 +213,7 @@ This privacy document applies only to Search-This.</p>
 <div class="cssnav"><a href="http://www.search-this.com/website_promotion" title="Website Promotion"><img src="http://www.search-this.com/images/Search_Engine_Link_up.gif" alt="Website Promotion" border="0"><span>Website Promotion</span></a></div>
 <div class="cssnav"><a href="http://www.search-this.com/google" title="Google"><img src="http://www.search-this.com/images/Search_Engine_Link_up.gif" alt="Google" border="0"><span>Google</span></a></div>
 <div class="cssnav"><a href="http://www.search-this.com/search_engine_articles" title="Search Engine Articles"><img src="http://www.search-this.com/images/Search_Engine_Link_up.gif" alt="Search Engine Articles" border="0"><span>Search Engine Articles</span></a></div>
-<div class="cssnav"><a href="http://www.search-this.com/search_engine_robots" title="Search Engine Robots"><img src="http://www.search-this.com/images/Search_Engine_Link_up.gif" alt="Search Engine Robots" border="0"><span>Search Engine Robots</span></a></div>
+<div class="cssnav"><a href="http://www.search-this.com/tools" title="Tools"><img src="http://www.search-this.com/images/Search_Engine_Link_up.gif" alt="Tools" border="0"><span>Tools <font color="#ff0000">NEW</font></span></a></div>
 <div class="cssnav"><a href="http://www.search-this.com/forums" title="Search-This Forums"><img src="http://www.search-this.com/images/Search_Engine_Link_up.gif" alt="Search-This Forums" border="0"><span>Search-This Forums</span></a></div>
 
 	<!--MAIN NAVIGATION END-->
@@ -224,13 +224,25 @@ This privacy document applies only to Search-This.</p>
 
 <div><img src="http://www.search-this.com/images/top.gif" height="4" alt=""></div>
 <div class="heading"> 
-  <span style="color:#ffcc00; font-size:12px; font-family:arial, helvetica, sans-serif; margin:0px; padding:0px;"><strong>Recent Articles</strong></span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://www.search-this.com/feed"><img src="http://www.search-this.com/images/rss.gif" class="imgNonBlock" alt="RSS feed"></a>
+  <span style="color:#ffcc00; font-size:12px; font-family:arial, helvetica, sans-serif; margin:0px; padding:0px;"><strong>Recent Articles</strong></span><a href="http://www.search-this.com/feed"><img src="http://www.search-this.com/images/rss.gif" class="imgNonBlock" alt="RSS feed"></a>
 </div>
 <img src="http://www.search-this.com/images/top-inner.gif" alt=""> 
 <div class="middle2"> 
   <div class="white"> 
 	<!--RECENT ARTICLES START-->
 	<p>
+<a href="http://www.search-this.com/website_design/structure_flash_site.aspx" class="link" title="The Best Structure for your Flash Site">The Best Structure for your Flash Site</a> 
+</p>
+
+<p>
+<a href="http://www.search-this.com/website_promotion/algorhythm_and_blues.aspx" class="link" title="Algorhythm and Blues">Algorhythm and Blues</a> 
+</p>
+
+<p>
+<a href="http://www.search-this.com/google/the_beauty_of_simplicity.aspx" class="link" title="The Beauty of Simplicity">The Beauty of Simplicity</a> 
+</p>
+
+<p>
 <a href="http://www.search-this.com/website_design/it's_not_about_the_website.aspx" class="link" title="It's Not About the Website">It's Not About the Website</a> 
 </p>
 
@@ -253,11 +265,6 @@ This privacy document applies only to Search-This.</p>
 <p>
 <a href="http://www.search-this.com/website_design/faster_flash.aspx" class="link" title="Faster Flash in 12 Steps">Faster Flash in 12 Steps</a> 
 </p>
-
-<p>
-<a href="http://www.search-this.com/website_design/fast_track_flash.aspx" class="link" title="Fast-Track Your Flash Site">Fast-Track Your Flash Site</a> 
-</p>
-
 
 <p>
 <a href="http://www.search-this.com/search_engine_optimization/natural_search.aspx" class="link" title="Natural Search - The Great Equalizer">Natural Search - The Great Equalizer</a> 
@@ -295,20 +302,16 @@ This privacy document applies only to Search-This.</p>
 
 <div class="spacer"></div>
 
-<a href="http://www.search-this.com/search_engine_article_submit.aspx"><img src="http://www.search-this.com/images/search-engine-articles.gif" alt="Website Promotion Articles"></a> 
-
-<div class="spacer"></div>
-
-<!-- www.hitslink.com web tools statistics hit counter code -->
-<script type="text/javascript" src="http://www.search-this.com/hitslink.js"></script>
-<!-- End www.hitslink.com statistics web tools hit counter code -->
-
 </div>
 <!--RIGHT COLUMN-->
 
 
 <div id="rightColumn">
 <!--THE RIGHT COLUMN-->
+<a href="http://www.search-this.com/tools"><img src="http://www.search-this.com/images/toolBox.gif" alt="Free Tools"></a> 
+
+<div class="spacer"></div>
+
 <a href="http://www.search-this.com/search_engine_decoder.asp"><img src="http://www.search-this.com/images/Search-Engine-Decoder.gif" alt="Search Engine Decoder"></a> 
 
 <div class="spacer"></div>
@@ -325,7 +328,7 @@ This privacy document applies only to Search-This.</p>
 <div class="middle2"> 
   <div class="white"> 
 	<!--FRIENDLYS START-->
-	<p><a href="http://www.search-this.com/contact.aspx" style="color:red;">Become a Sponsor Today!</a></p><p><a href="http://www.seoinc.com" target="_blank" class="link">Search Engine Marketing Firm</a></p><p><a href="http://www.neutralize.com" target="_blank" class="link">Seach Engine Optimisation</a></p><p><a href="http://www.seoimage.com" target="_blank" class="link">Search Engine Optimization Company</a></p><p><a href="http://www.marketingfind.com" target="_blank" class="link">Internet Marketing and <br> SEO Tips</a></p><p><a href="http://www.webuildpages.com" target="_blank" class="link">SEO Services</a></p><p class="last"><a href="http://www.flashmagazine.com" target="_blank" class="link">Flash Tutorials</a></p>
+	<p><a href="http://www.search-this.com/contact.aspx" style="color:red;">Become a Sponsor Today!</a></p><p><a href="http://www.seoimage.com" target="_blank" class="link">Search Engine Optimization Company</a></p><p><a href="http://www.marketingfind.com" target="_blank" class="link">Internet Marketing and <br> SEO Tips</a></p><p><a href="http://www.webuildpages.com" target="_blank" class="link">SEO Services</a></p><p class="last"><a href="http://www.flashmagazine.com" target="_blank" class="link">Flash Tutorials</a></p>
 	<!--FRIENDLYS END-->
   </div>
 </div>
