silive.com (archived on 2006-06-15)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business;education;newsandmedia",
  "char_count": 6782,
  "classifier_probability": 0.95,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 12.09,
  "homepage_snapshot_redirected_domain": "silive.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20060403215501id_/http://www.silive.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20060403215501id_/http%3A//silive.com",
  "interval": "2006_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "silive.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20060615094031id_/http%3A//www.silive.com/privacypolicy",
  "policy_title": "SILive.com: Privacy Policy",
  "policy_url": "silive.com/privacypolicy",
  "sha1": "52a7f15e44aeac4f86ec2d020b2ddc55d7289faf",
  "simhash": 320128973940892295,
  "simhash_updated": true,
  "site_hostname": "silive.com",
  "site_url": "http://silive.com",
  "smog": 14.55,
  "strict_updated": true,
  "timestamp": "20060615094031",
  "word_count": 1121,
  "year": 2006
}

--- a/s/si/sil/silive.com.html
+++ b/s/si/sil/silive.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the silive.com privacy policy that was archived on 2005-12-15.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051215004036id_/http%3A//www.silive.com/privacypolicy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the silive.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615094031id_/http%3A//www.silive.com/privacypolicy) for the most accurate reproduction.-->
 
 <html><head>
 <title>SILive.com: Privacy Policy</title>
@@ -9,8 +9,10 @@ function POP(u,n,w,h,f){windowFeatures = "width="+w+",height="+h;if (f) windowFe
 </script>
 
 <script language="javascript" src="http://www.silive.com/dhtml/stats/track/vsfunctions.js"></script>
+<script language="javascript" src="http://www.silive.com/dhtml/stats/track/vssetup.js"></script>
+<script language="JavaScript">var tcdacmd="dt";</script>
+<script src="http://an.tacoda.net/an/12319/slf.js" language="JavaScript"></script>
 </head>
-
 <body bgcolor="#FFFFFF" link="#0033CC" vlink="#02618A">
 <!--- OAS SETUP start -->
 <script language="JavaScript">
@@ -41,7 +43,7 @@ if (navigator.userAgent.indexOf('Mozilla/3') != -1 || navigator.userAgent.indexO
 if (OAS_version >= 11)
   document.write('<SCRIPT LANGUAGE=JavaScript1.1 SR' + 'C="' + OAS_url + 'adstream_mjx.ads/' + OAS_sitepage + '/1' + OAS_rns + '@' + OAS_listpos + '?' + OAS_query + '"><\/SCRIPT>');
 //-->
-</script><script language="JavaScript1.1" src="http://ads.silive.com/RealMedia/ads/adstream_mjx.ads/www.silive.com/privacypolicy/index.ssf/1159700552@BannerTop,Popup,Sponsor1,SponsorLeft,SponsorRight,Tile1,TxtLink1,TxtLink2,TxtLink3?NULL"></script>
+</script><script language="JavaScript1.1" src="http://ads.silive.com/RealMedia/ads/adstream_mjx.ads/www.silive.com/privacypolicy/index.ssf/1068784914@BannerTop,Popup,Sponsor1,SponsorLeft,SponsorRight,Tile1,TxtLink1,TxtLink2,TxtLink3?NULL"></script>
 <script language="JavaScript">
 <!-- -->
 document.write('');
@@ -92,7 +94,7 @@ OAS_AD('BannerTop');
 <td width="355" colspan="5"><img src="http://www.silive.com/images/spacer.gif" width="1" height="1" vspace="2"></td>
 </tr>
 <tr valign="middle">
-<td width="1"><form method="get" action="http://www.silive.com/search/index.ssf"><input type="hidden" name="sconfig" value="silive"><input type="hidden" size="2" name="count" value="20"><input type="hidden" name="xpath.pubdate" value="12/14/05 12/13/05 12/12/05 12/11/05 12/10/05 12/09/05 12/08/05 12/07/05 12/06/05 12/05/05 12/04/05 12/03/05 12/02/05 12/01/05"><input type="hidden" name="xpath.category_letter" value=""><img src="http://www.silive.com/images/spacer.gif" width="1" height="1"></form></td>
+<td width="1"><form method="get" action="http://www.silive.com/search/index.ssf"><input type="hidden" name="sconfig" value="silive"><input type="hidden" size="2" name="count" value="20"><input type="hidden" name="xpath.pubdate" value="06/15/06 06/14/06 06/13/06 06/12/06 06/11/06 06/10/06 06/09/06 06/08/06 06/07/06 06/06/06 06/05/06 06/04/06 06/03/06 06/02/06"><input type="hidden" name="xpath.category_letter" value=""><img src="http://www.silive.com/images/spacer.gif" width="1" height="1"></form></td>
 <td width="180" align="right"><img src="http://www.silive.com/images/toprail/arrow.gif" width="14" height="10">&nbsp;<font face="arial,sans-serif" size="2" color="#FBBB7A"><a href="/search/"><font color="#FABA7A"><b>NEWSPAPER SEARCH</b></font></a></font>&nbsp;</td>
 <td width="160" align="center"><input type="text" name="xpath.any" maxlength="30" size="18" value="Enter Keyword(s)" onfocus="if ( value == 'Enter Keyword(s)' ) { value = ''; }" onblur="if ( value == '' ) { value = 'Enter Keyword(s)'; }" style="width: 142px"></td>
 <td width="60"><input type="image" src="http://www.silive.com/images/toprail/go_orange.gif" width="35" height="14" border="0"></td>
@@ -192,8 +194,12 @@ OAS_AD('SponsorRight');
 		<table width="190" border="0" cellspacing="2" cellpadding="3">
 		 <tbody><tr valign="middle"><td width="190" bgcolor="#E3FEF0">
 <font face="Arial,sans-serif" size="2">» <a href="http://www.collegeanduniversity.net/Main/Home.cfm?AffID=111"><font color="#000000">Search for Colleges and Schools</font></a><br>
-<font face="Arial,sans-serif" size="2">» <a href="http://www.silive.com/sites/frostyfriends/FROSTY_FRIENDS_39306.pdf"><font color="#000000">Frosty Friends Name Game Contest</font></a><br>
-<font face="Arial,sans-serif" size="2">» <a href="http://www.silive.com/sites/dickens/dickens_contest_1207.pdf"><font color="#000000">Dickens' Coloring Contest</font></a><br></font></font></font></td></tr>
+
+<font face="Arial,sans-serif" size="2">» <a href="/contests"><font color="#000000">Cool Contests and Giveaways </font></a><br>
+
+
+
+</font></font></td></tr>
 		</tbody></table><img src="/images/spacer.gif" width="1" height="1" vspace="2"><br>
 
 		<!--- OAS AD 'Sponsor1' begin -->
@@ -265,9 +271,9 @@ OAS_AD('TxtLink3');
 </tbody></table><img src="http://www.silive.com/images/spacer.gif" width="1" height="1" vspace="3"><br><table width="510" border="0" cellspacing="5" cellpadding="0">
 <tbody><tr valign="top">
 <td width="143"><a href="http://ads1.advance.net/RealMedia/ads/click_lx.ads/www.silive.com/////ProxyLink/SILIVE/ST_CLICKS_02/SubscribeClick.html/" target="_blank"><img src="http://www.silive.com/images/footer/silive.gif" width="143" height="33" border="0"></a></td>
-<td width="367"><font face="arial,sans-serif" size="2">Have The Advance delivered to your home or business. Save 40% off the newsstand price with EZPay. <a href="http://ads1.advance.net/RealMedia/ads/click_lx.ads/www.silive.com/////ProxyLink/SILIVE/ST_CLICKS_02/SubscribeClick.html/" target="_blank">Subscribe Now!</a></font></td>
+<td width="367"><font face="arial,sans-serif" size="2">Have The Advance delivered to your home or business. Save 36% off the newsstand price with EZPay. <a href="http://ads1.advance.net/RealMedia/ads/click_lx.ads/www.silive.com/////ProxyLink/SILIVE/ST_CLICKS_02/SubscribeClick.html/" target="_blank">Subscribe Now!</a></font></td>
 </tr></tbody></table>
-<hr size="1" width="530" noshade=""><img src="http://www.silive.com/images/spacer.gif" width="1" height="1" vspace="3"><br><a href="/aboutus/">About Us</a> | <a href="/contactus/">Help/Feedback</a> | <a href="/mediakit/">Advertise With Us</a><br><img src="http://www.silive.com/images/spacer.gif" width="1" height="1" vspace="1"><br>Use of this site constitutes acceptance of our <a href="/useragreement/">User Agreement</a>. Please read our <a href="/privacypolicy/">Privacy Policy</a>.<br>© 2005 <a href="/">SILive.com</a>. All Rights Reserved.</font><p><font face="arial,sans-serif" size="1"><table width="201" border="0" cellspacing="0" cellpadding="0">
+<hr size="1" width="530" noshade=""><img src="http://www.silive.com/images/spacer.gif" width="1" height="1" vspace="3"><br><a href="/aboutus/">About Us</a> | <a href="/contactus/">Help/Feedback</a> | <a href="/mediakit/">Advertise With Us</a><br><img src="http://www.silive.com/images/spacer.gif" width="1" height="1" vspace="1"><br>Use of this site constitutes acceptance of our <a href="/useragreement/">User Agreement</a>. Please read our <a href="/privacypolicy/">Privacy Policy</a>.<br>© 2006 <a href="/">SILive.com</a>. All Rights Reserved.</font><p><font face="arial,sans-serif" size="1"><table width="201" border="0" cellspacing="0" cellpadding="0">
 <tbody><tr>
 <td width="100"><a href="http://www.advance.net/"><img src="http://www.silive.com/images/footer/advancelogo.gif" width="88" height="31" border="0"></a></td>
 <td width="1" bgcolor="#000000"><img src="http://www.silive.com/images/spacer.gif" width="1" height="1"></td>
@@ -318,6 +324,9 @@ OAS_AD('Popup');
 
 
 <!-- Visual Sciences Extra Tracking -->
+<script language="javascript">
+if (_pdata){ sendpdata(); }
+</script>
 <script language="javascript" type="text/javascript"> 
   if ( (document.cookie).indexOf('v1st')>=0 && (document.cookie).indexOf('GTC=')<0 ) {
     if ( (document.referrer).indexOf(document.domain)<0 ) { 
